public abstract class Widget {

    public abstract void present();

    public abstract int getPriority();

    public abstract int getID();

    public abstract String getName();
}
